# lca-email-assistant-api

./: .env.example  .gitignore  ENHANCEMENTS.md  PRD.md  README.md  main.py  pyproject.toml  test.txt  test_email_parser.py  test_stream.py  test_stream_mock.py
agent/: prompt_builder.py  setup.py  tools.py  utils.py
middlewares/: auth.py
routers/: attachments.py  auth.py  chat.py  preferences.py
scripts/: 001_add_google_oauth_columns.sql  002_recreate_tables.sql  003_add_chat_attachments.sql  cleanup_expired_attachments.py  migrate.py  run_migration.py  test_supabase.py  verify_security.py
services/: attachment_extractor.py  attachments.py  auth_helpers.py  db.py  gmail.py  preferences.py  store.py  supabase.py
utils/: config.py  encryption.py  google_auth.py  logger.py  security.py
